# docs/api/openapi.yaml
@@ -323,6 +323,29 @@ paths:
               schema:
                 $ref: "#/components/schemas/ApiResponseEntryResponse"
   /api/v1/lifetime/period-reflections:
+    get:
+      tags:
+      - lifetime-controller
+      operationId: getPeriodReflections
+      parameters:
+      - name: featureType
+        in: query
+        required: false
+        schema:
+          type: string
+          enum:
+          - ENTRY_REFLECTION
+          - THREE_DAY_REFLECTION
+          - WEEKLY_REFLECTION
+          - CONVERSATION_REPLY
+          - CONVERSATION_SUMMARY
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ApiResponseListPeriodReflectionResponse"
     post:
       tags:
       - lifetime-controller
@@ -766,6 +789,12 @@ paths:
           - ACTION
           - RECOVERY
           - CUSTOM
+      - name: range
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
       responses:
         "200":
           description: OK
@@ -1363,6 +1392,9 @@ components:
         id:
           type: string
           format: uuid
+        entryId:
+          type: string
+          format: uuid
         featureType:
           type: string
           enum:
@@ -1800,6 +1832,13 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/PersonalSummaryResponse"
+    ApiResponseListPeriodReflectionResponse:
+      type: object
+      properties:
+        data:
+          type: array
+          items:
+            $ref: "#/components/schemas/PeriodReflectionResponse"
     ApiResponseListCalendarDayResponse:
       type: object
       properties:
